--- a/Flomio Test Service Camera Version/AndroidManifest.xml
+++ b/Flomio Test Service Camera Version/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bpcreates.flomio_service"
-    android:versionCode="4"
-    android:versionName="1.2.2" >
+    android:versionCode="5"
+    android:versionName="1.2.3" >
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="16" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
